src/css/6100-main-base-modern.css
/*! Copyright 2007-2009,2017-2018 Daniel F. Dickinson <cshored@thecshore.com>
 *  Released under the Creative Commons BY (Attribution) 4.0 License
 */

/* The C Shore CSS3 Main Elements */
@media screen {
  .DefaultBodyWrapper {
    display: flex;
    align-content: stretch;
    align-items: flex-start;
    justify-content: flex-start;
    flex-flow: row wrap;
    width: 100%;
 
    & .SectionPageMain,
    & .Main {
      top: 0;
    }
    & .Footer {
      top: 0;
    }
  }

 .Main,
 .SectionPageMain {
    width: auto;
    margin-top: .4em;
    top: 0;
    display: inline-flex;
    flex: 1 1 100%;
    align-content: stretch;
    align-items: center;
    justify-content: flex-start;
    flex-flow: row wrap;

    & .Title {
      flex: 1 1 100%;
      margin-top: 0;
      text-align: center;
      margin-bottom: .2em;
    }
    & .MainContent {
      & h1,
      & .Title {
        margin-top: 0;
        text-align: center;
        margin-bottom: .2em;
      }
    }
    & .LicenseArticle {
      align-self: center;
      flex: 1 1 100%;
      margin: 0;
      width: auto;

      & .LicenseBlock {
        width: auto;
        display: block;
      }
    }
  }

  .Footer {
    margin-top: .4em;
    position: static;
    flex: 1 1 100%;
  }
}

